# manifest

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
benches/: lookup.rs
src/: lib.rs
tests/: integration.rs
tests/fixtures/test_crate/: Cargo.toml  Manifest.toml  build.rs
tests/fixtures/test_crate/src/: all.rs  deprecated.rs  lib.rs  opt.rs  some.rs
