[package]
name = "manifest"
version = "0.1.0"
edition = "2024"

[dependencies]
const-str = { version = "0.7", optional = true }
indexmap = { version = "2.0", features = ["serde"], optional = true }
prettyplease = { version = "0.2", optional = true }
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
syn = { version = "2.0", optional = true }
toml = { version = "0.9", features = ["preserve_order"], optional = true }
visibility = { version = "0.1", optional = true }

[dev-dependencies]
proptest = "1.0"
test_crate = { path = "tests/fixtures/test_crate" }

[features]
build = [
    "dep:indexmap",
    "dep:prettyplease",
    "dep:proc-macro2",
    "dep:quote",
    "dep:serde",
    "dep:syn",
    "dep:toml",
    "dep:visibility",
]
doctest = []
objects = [
    "dep:const-str",
    "test_crate/objects",
]
