[package]
name = "manifest"
version = "0.1.0"
edition = "2024"
description = "Message catalogs with compile-time guarantees"
license-file = "LICENSE"
repository = "https://github.com/yawn/manifest"

[dependencies]
const-str = { version = "0.7", optional = true }
document-features = { version = "0.2", optional = true }
indexmap = { version = "2.0", features = ["serde"], optional = true }
prettyplease = { version = "0.2", optional = true }
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
syn = { version = "2.0", optional = true }
toml = { version = "0.9", features = ["preserve_order"], optional = true }
visibility = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
proptest = "1.0"
test_crate = { path = "tests/fixtures/test_crate" }

[features]
## Enables features for build scripts
build = [
    "dep:indexmap",
    "dep:prettyplease",
    "dep:proc-macro2",
    "dep:quote",
    "dep:serde",
    "dep:syn",
    "dep:toml",
    "dep:visibility",
]
docs-test = []
docs-features = ["dep:document-features"]
## Enables the generation of `Message` structs for build scripts. Only useful in combination with the `build` feature.
objects = [
    "dep:const-str",
    "test_crate/objects",
]

[[bench]]
name = "lookup"
harness = false

[package.metadata.docs.rs]
features = ["build", "docs-features", "objects" ]
